--- a/main.html
+++ b/main.html
@@ -1,4 +1,117 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cards Gallery</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <style>
+        .card {
+            border-radius: 8px;
+        }
+        .card-body {
+            text-align: center;
+        }
+        .gallery img {
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">Cards Gallery</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 gallery">
+            <!-- Card 1 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="Image1" class="card-img-top" alt="Image1" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                    <div class="card-body">
+                        <h6 class="card-title">Description 1</h6>
+                        <p class="card-text">Details about Image 1</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="Image2" class="card-img-top" alt="Image2" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                    <div class="card-body">
+                        <h6 class="card-title">Description 2</h6>
+                        <p class="card-text">Details about Image 2</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="Image3" class="card-img-top" alt="Image3" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                    <div class="card-body">
+                        <h6 class="card-title">Description 3</h6>
+                        <p class="card-text">Details about Image 3</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 4 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="Image4" class="card-img-top" alt="Image4" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                    <div class="card-body">
+                        <h6 class="card-title">Description 4</h6>
+                        <p class="card-text">Details about Image 4</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 5 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="Image5" class="card-img-top" alt="Image5" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                    <div class="card-body">
+                        <h6 class="card-title">Description 5</h6>
+                        <p class="card-text">Details about Image 5</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 6 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="Image6" class="card-img-top" alt="Image6" data-bs-toggle="modal" data-bs-target="#lightboxModal">
+                    <div class="card-body">
+                        <h6 class="card-title">Description 6</h6>
+                        <p class="card-text">Details about Image 6</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Lightbox Modal -->
+    <div class="modal fade" id="lightboxModal" tabindex="-1" aria-labelledby="lightboxModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="lightboxModalLabel">Image Preview</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <img src="" id="lightboxImage" class="img-fluid" alt="Preview">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Lightbox functionality
+        document.querySelectorAll('.gallery img').forEach(img => {
+            img.addEventListener('click', function () {
+                const lightboxImage = document.getElementById('lightboxImage');
+                lightboxImage.src = this.src;
+            });
+        });
+    </script>
+</body>
+</html>
 
 <html>
 
